Update v:0.1.6 - Fix ReactMessage visibility in Register Component

--- a/src/css/component/Message.css
+++ b/src/css/component/Message.css
@@ -1,5 +1,5 @@
 .rm-wrapper {
-  z-index: 2;
+  z-index: 1000;
 }
 .rm-item {
   background: var(--secondColor);
